--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,9 @@ h6 {
 }
 
 table {
-
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
 }
 
 /*--------------------------------------------------------------
